# ML-firesforest

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Cleaned.ipynb  Expl-data-class.ipynb  Expl-data.ipynb  Size_fires.ipynb  Untitled.ipynb  tree.dot
